# Yadro-Tapes

./: CMakeLists.txt  README.md  config.txt  input.txt
include/: config_loader.h  file_tape.h  tape.h  tape_sorter.h
src/: config_loader.cpp  file_tape.cpp  main.cpp  tape_sorter.cpp
tests/: CMakeLists.txt  test_file_tape.cpp  test_tape_sorter.cpp
